--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "react-spinners": "^0.5.1",
     "request": "^2.88.0"
   },
   "scripts": {
