--- a/functions/package.json
+++ b/functions/package.json
@@ -9,12 +9,16 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "0.19.0",
+    "@google-cloud/storage": "^2.3.4",
+    "@google-cloud/translate": "^2.1.3",
     "@google-cloud/vision": "^0.24.0",
     "cors": "^2.8.5",
     "firebase-admin": "^6.4.0",
     "firebase-functions": "^2.1.0",
     "promise": "^8.0.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "safe-buffer": "^5.1.2"
   },
   "private": true
 }
